2002-09-18  Eric R. Krause  <ekrause_98@users.sourceforge.net>

	* include/winuser.h (DS_SHELLFONT): Define.

2002-09-17  Daniel Schlyder  <daniel@dascdev.net>

	* include/winnt.h (VER_SUITE_BLADE): Define.

2002-09-17  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/shlobj.h (SHGetSpecialFolderPath[AW]):
	Add _WIN32_IE guard. Correct prototype for wide version.
	(SHGetFolderPath): Add comment on shfolder.dll.
	(SHGetFolderLocation): Add prototyope for WinME and W2K.
	(SHGetFolderPathAndSubDir[AW]): Add prototypes for XP.

2002-09-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/shell32.def (SHGetFolderPath[AW]): Add comment.
	* lib/shfolder.def: New file.

2002-09-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winsock.h (timeval): Guard struct and associated
	macros with _TIMEVAL_DEFINED.
	* include/winsock2.h (timeval): Likewise.

2002-09-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/shell32.def (SHBindtoParent,SHCreateDirectoryEx[AW],
	SHCreateProcessAsUserW,SHCreateQueryCancelAutoPlayMoniker,
	SHCreateShellItem,SHEmptyRecycleBin[AW],
	SHEnumerateUnreadMailAccountsW,SHExtractIconsW,
	SHGetDataFromIDList[AW],SHGetDiskFreeSpace[AW],
	SHGetDiskFreeSpaceEx[AW],SHGetFolderLocation,
	SHGetFolderPathAndSubDir[AW],SHGetIconOverlayIndex[AW],
	SHGetNewLinkInfo[AW],SHGetSettings,SHGetUnreadMailCountW,
	SHInvokePrinterCommand[AW],SHIsFileAvailableOffline,
	SHLoadNonloadedIconOverlayIdentifiers,
	SHOpenFolderAndSelectItems,SHParseDisplayName,
	SHPathPrepareForWrite[AW],SHQueryRecycleBin[AW],
	SHSetLocalizedName,SHSetUnreadMailCountW,
	SHUpdateRecycleBinIcon: Add missing stubs.

2002-09-07  Earnie Boyd  <earnie@users.sf.net>

	* include/windef.h (WINVER): Add documentation.
	(_WIN32_WINNT): Ditto.
	Special thanks to Paul Schmidt <paul@tricattechnologies.com>

2002-09-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/Makefile.in (TEST_OPTIONS): Define WINVER to 0x0666.
