@@ -1,3 +1,9 @@
+2002-09-24  Rene Moeller Fonseca  <fonseca@users.sourceforge.net>
+
+        * include/winbase.h (FindFirstFileEx): Fixed ANSI mode.
+        * include/wingdi.h (PFD_SWAP_LAYER_BUFFERS):Added define.
+        * include/winuser.h (AppendMenu[AW]): Fixed prototypes.
+
 2002-09-18  Eric R. Krause  <ekrause_98@users.sourceforge.net>
 
 	* include/winuser.h (DS_SHELLFONT): Define.
